--- a/src/addtask.css
+++ b/src/addtask.css
@@ -5,8 +5,9 @@
     right:0;    
     /* height: 500px; */
     transition: all 0.3s ease-in-out;
-    max-width: var(--idealdimension);
+    /* max-width: var(--idealdimension); */
     z-index: 1;
+    
 }
 .taskcontainerhidden {
     /* display:none; */
@@ -14,7 +15,6 @@
 }
 .taskcontainervisible {
     /* display:flex; */
-    max-width: var(--idealdimension);
 }
 .taskcontainerinner {
     display: flex;
@@ -24,12 +24,12 @@
     /* background-color: var(--modalbg); */
     /* background-color: var(--titlebg); */
     text-align: center;
-    max-width: var(--idealdimension);
     color:var(--light);
     height:fit-content;
     padding-bottom: 1rem;
     height:100vh;
-    position:relative;
+    position:relative;    
+    /* padding: 0 1.5rem; */
 }
 .addoptions {
     display: flex;
@@ -37,7 +37,7 @@
     align-items: center;
     font-size: 1.5rem;
     width:100%;
-    
+    cursor: pointer;
     background-color: var(--light);
     color:black;
 }
@@ -47,25 +47,28 @@
     padding:0.5rem;
 }
 .newitem:hover {
-    background-color: lime;
+    background-color: rgb(36, 194, 206);
+    /* border:2px solid rgb(36, 194, 206); */
     /* border-radius: 10px; */
     
 }
 .modalbody {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     padding: 1rem;
     gap: 10px;
-    margin: 1rem;
     border: 2px solid var(--light);
     border-radius: 10px;
     position:relative;
     box-shadow: 0 5px 16px 4px rgb(78, 1, 1);
-    max-width: var(--idealdimension);
+    max-width: 700px;
+    width:90%;
+    /* min-width: var(--modalbody); */
     background-color: var(--modalbg);
-    min-height: 50%;
+    min-height: 70%;
+    margin: 1.5rem;
 }
 .cancel {
     position:absolute;
@@ -85,7 +88,7 @@
 /* -------- form elements -------- */
 input, textarea {
     text-align: center;
-    /* width:90%; */
+    width:100%;
     border-radius: 10px;
     resize: none;
     border:none;
@@ -105,7 +108,7 @@ input:focus, textarea:focus {
 }
 label, input, textarea, .formouter {
     /* width: 50ch; */
-    width:90%;
+    /* width:90%; */
 }
 .formouter {    
     display: inherit;
@@ -182,11 +185,19 @@ input[type='date'] {
 }
 
 /* -------- Add project -------- */
+.menuSelected {
+    background-color: var(--modalbg);
+    color:var(--light);
+}
+.menuSelected:hover {
+    background-color: var(--modalbg);
+    color:var(--light);
+} 
 .projectlabel, .listlabel {
     margin: 20px;
 }
 .projectinput, .listinput {
-    flex:1;
+    flex:0.5;
 }
 .projecthint, .listhint {
     margin: 20px;
