--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,11 @@
     --light:rgb(194, 194, 194);
     --background:rgb(194, 194, 194);
     --modalbg:#2F4858;
+    --category:rgb(194, 194, 194);
 
+}
+li {
+    list-style: none;
 }
 @media only screen and (max-width: 900px) {
     :root {
@@ -41,7 +45,7 @@ body {
     /* width: var(--idealdimension); */
     margin: 0 auto;
     min-height: 100vh;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* min-width: 900px; */
     max-width: 1000px;
 }
@@ -119,5 +123,76 @@ body {
 .maincontent {
     position:relative;
     background-color: var(--titlebg);
-    height:100vh;
+    /* height:100vh; */
+    padding-top: 2rem;
+    padding-right: 1rem;
+    height: fit-content;
+    min-height: 50vh;
+    overflow: hidden;
+}
+.task_category {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    /* background-color: var(--modalbg); */
+    padding-left: 2rem;
+}
+.list_item {
+    color:var(--dark);
+    padding-left: 4rem;
+}
+.taskcard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:0.5rem 1rem;
+    margin-bottom: 1.5rem;
+    border-radius: 100px;
+    background-color: rgb(149, 113, 187);
+    box-shadow: 0 5px 16px 4px rgb(78, 1, 1);
+    width:100%;
+    gap:1rem;
+    text-align: center;
+    transition:all 0.4s ease;
+}
+.taskcard svg {
+    transform: scale(0.7);
+}
+.tasktitle {
+    flex:1;
+    font-size: 1.5rem;
+}
+.tasktitle {
+    text-align: left;
+    padding-left: 1rem;
+}
+.taskcard:hover {
+    transform: scale(1.02);
+    box-shadow: 0 5px 16px 4px rgb(177, 44, 44);
+    /* box-shadow:inset 0 0 16px 2px rgb(10, 192, 192); */
+}
+ul .prio0 {
+    border:3px solid transparent;
+}
+ul .prio1 {
+    border:3px solid green;
+}
+ul .prio2 {
+    border:3px solid orange;
+}
+ul .prio3 {
+    border:3px solid red;
+}
+.taskcard svg:hover {
+    cursor: pointer;
+    stroke:cyan;
+    fill:cyan;
+}
+.squeeze {
+    transform:scale(0);
+}
+.validate {
+    /* transform:scale(0); */
+    transform:translateX(120%);
 }
