--- a/src/addtask.css
+++ b/src/addtask.css
@@ -130,8 +130,19 @@ label, input, textarea, .formouter {
     gap:15px;
     cursor: pointer;
 }
+.prioOuter {
+    position:relative;
+}
+.prioLabelOuter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 .priohint {
-    height:1.5rem;
+    height:1em;
+    /* position:absolute; */
+    /* right:-50%; */
     font-size: 1rem;
 }
 .prioitem {
@@ -160,6 +171,49 @@ label, input, textarea, .formouter {
     transform: scale(1.2);
     border:3px solid cyan;
 }
+.joinproject {
+    position: relative;
+}
+.joinproject .projectDiv {
+    position: absolute;
+    top:0;
+    /* left:0; */
+    /* right: 0; */
+    z-index: 2;
+    /* width:100%; */
+    height: 100%;
+    background-color: var(--light);
+    /* border:2px solid black; */
+    /* transform: scale(0); */
+    border-radius: 10px;
+    color:black;
+}
+.projectDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.projectDiv input {
+    outline:2px solid var(--modalbg);
+    margin:5px;
+    padding:5px;
+    max-width: 90%;
+    background-color: white;
+    font-size: var(--fontsmall);
+    color:black;
+}
+.projectddl {
+    min-width: 60px;
+}
+.projectDiv svg {
+    transform: scale(0.7);
+    cursor: pointer;
+}
+.projectDiv svg:hover {
+    stroke:green;
+    fill:green;
+}
 .submit {
     width:fit-content;
     display: flex;
@@ -183,7 +237,32 @@ input[type='date'] {
     border: 2px solid var(--light);
     font-size: 1em;
 }
-
+.joinproject {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border:2px solid var(--light);
+    border-radius:10px;
+    padding:5px;
+}
+.projectddl {
+    font-family: 'Poppins', sans-serif;
+    font-size: var(--fontsmall);
+    padding: 5px;
+    margin:5px;
+    border-radius: 5px;
+}
+.createProject {
+    fill:var(--light);
+    stroke:var(--light);
+    transform: scale(0.5);
+    cursor: pointer;
+}
+.createProject:hover {
+    fill:green;
+    stroke:green;
+}
 /* -------- Add project -------- */
 .menuSelected {
     background-color: var(--modalbg);
@@ -201,4 +280,24 @@ input[type='date'] {
 }
 .projecthint, .listhint {
     margin: 20px;
+}
+
+/* -------- Edit task -------- */
+.modalouter {
+    position:absolute;
+    top: 0;
+    left:0;
+    right:0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.existingProjects {
+    color:black;
+}
+.existingProjects div {
+    color:var(--light);
+}
+.projectAddOuter .projectTitle:focus {
+    outline: 3px solid cyan;
 }
