--- a/src/addtask.css
+++ b/src/addtask.css
@@ -182,7 +182,7 @@ label, input, textarea, .formouter {
     z-index: 2;
     /* width:100%; */
     height: 100%;
-    background-color: var(--light);
+    background-color: var(--modalbg);
     /* border:2px solid black; */
     /* transform: scale(0); */
     border-radius: 10px;
@@ -300,4 +300,13 @@ input[type='date'] {
 }
 .projectAddOuter .projectTitle:focus {
     outline: 3px solid cyan;
+}
+.addAndCancel {
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.joinproject {
+    fill:var(--light);
+    stroke:var(--light);
 }
