--- a/src/addtask.css
+++ b/src/addtask.css
@@ -7,29 +7,32 @@
     transition: all 0.3s ease-in-out;
     /* max-width: var(--idealdimension); */
     z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 .taskcontainerhidden {
-    /* display:none; */
     transform: scale(0) translateY(-100%);
 }
-.taskcontainervisible {
-    /* display:flex; */
-}
+
 .taskcontainerinner {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    /* background-color: var(--modalbg); */
-    /* background-color: var(--titlebg); */
+    
     text-align: center;
     color:var(--light);
     height:fit-content;
-    padding-bottom: 1rem;
+    /* padding-bottom: 1rem; */
     height:100vh;
     position:relative;    
-    /* padding: 0 1.5rem; */
+    /* outline:2px solid green; */
+    max-width: 700px;
+    width:90%;
+    
+    /* background-color: var(--modalbg); */
 }
 .addoptions {
     display: flex;
@@ -38,18 +41,22 @@
     font-size: 1.5rem;
     width:100%;
     cursor: pointer;
-    background-color: var(--light);
-    color:black;
+    background-color: var(--modalbg);
+    border:2px solid var(--light);
+    color:var(--light);
+    border-radius: 10px;
 }
 .newitem {
     /* outline: 2px solid var(--titlebg); */
     width:100%;
     padding:0.5rem;
+    border-radius: 10px;
 }
 .newitem:hover {
     background-color: rgb(36, 194, 206);
     /* border:2px solid rgb(36, 194, 206); */
     /* border-radius: 10px; */
+    color:var(--titledark);
     
 }
 .modalbody {
@@ -64,11 +71,12 @@
     position:relative;
     box-shadow: 0 5px 16px 4px rgb(78, 1, 1);
     max-width: 700px;
-    width:90%;
+    /* width:90%; */
+    width:100%;
     /* min-width: var(--modalbody); */
     background-color: var(--modalbg);
     min-height: 70%;
-    margin: 1.5rem;
+    /* margin: 1.5rem; */
 }
 .cancel {
     position:absolute;
@@ -309,4 +317,10 @@ align-items: center;
 .joinproject {
     fill:var(--light);
     stroke:var(--light);
+}
+.existingLists {
+    color:black;
+}
+.listName {
+    color:var(--light);
 }
