--- a/src/addtask.css
+++ b/src/addtask.css
@@ -3,9 +3,7 @@
     top:0;
     left:0;
     right:0;    
-    /* height: 500px; */
     transition: all 0.3s ease-in-out;
-    /* max-width: var(--idealdimension); */
     z-index: 1;
     display: flex;
     justify-content: center;
@@ -20,25 +18,20 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    flex-direction: column;
-    
+    flex-direction: column;    
     text-align: center;
     color:var(--light);
     height:fit-content;
-    /* padding-bottom: 1rem; */
     height:100vh;
     position:relative;    
-    /* outline:2px solid green; */
     max-width: 700px;
     width:90%;
-    
-    /* background-color: var(--modalbg); */
 }
 .addoptions {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    font-size: 1.5rem;
+    font-size: var(--font-large);
     width:100%;
     cursor: pointer;
     background-color: var(--modalbg);
@@ -47,10 +40,13 @@
     border-radius: 10px;
 }
 .newitem {
-    /* outline: 2px solid var(--titlebg); */
     width:100%;
     padding:0.5rem;
     border-radius: 10px;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modalbody {
@@ -65,12 +61,9 @@
     position:relative;
     box-shadow: 0 5px 16px 4px rgb(78, 1, 1);
     max-width: 700px;
-    /* width:90%; */
     width:100%;
-    /* min-width: var(--modalbody); */
     background-color: var(--modalbg);
     min-height: 70%;
-    /* margin: 1.5rem; */
 }
 .cancel {
     position:absolute;
@@ -85,8 +78,6 @@
     stroke:red;
     fill:red;
 }
-
-
 /* -------- form elements -------- */
 input, textarea {
     text-align: center;
@@ -102,15 +93,11 @@ input {
     font-size: var(--fontmedium);
 }
 textarea {
-    font-size: 1em;
+    font-size: var(--fontmedium);
 }
 input:focus, textarea:focus {
     outline:none;
     border:none;
-}
-label, input, textarea, .formouter {
-    /* width: 50ch; */
-    /* width:90%; */
 }
 .formouter {    
     display: inherit;
@@ -143,9 +130,8 @@ label, input, textarea, .formouter {
 }
 .priohint {
     height:1em;
-    /* position:absolute; */
-    /* right:-50%; */
-    font-size: 1rem;
+    font-size: var(--fontsmall);
+    color: var(--titledark);
 }
 .prioitem {
     border-radius: 50%;
@@ -154,7 +140,6 @@ label, input, textarea, .formouter {
     transition: transform 0.3s ease;
 }
 .prioitem:hover {
-    /* border:2px solid cyan; */
     transform: scale(1.5);
 }
 .modalbody .prio1 {
@@ -179,14 +164,9 @@ label, input, textarea, .formouter {
 .joinproject .projectDiv {
     position: absolute;
     top:0;
-    /* left:0; */
-    /* right: 0; */
     z-index: 2;
-    /* width:100%; */
     height: 100%;
     background-color: var(--modalbg);
-    /* border:2px solid black; */
-    /* transform: scale(0); */
     border-radius: 10px;
     color:black;
 }
@@ -219,14 +199,12 @@ label, input, textarea, .formouter {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* width:80px; */
     cursor: pointer;
 }
 
 .submit svg{
     stroke:var(--light);
     fill:var(--light);    
-    /* transform: scale(1.5); */
 }
 .submit:hover path{
     fill: green;
@@ -235,7 +213,7 @@ label, input, textarea, .formouter {
 input[type='date'] {
     width:auto;
     border: 2px solid var(--light);
-    font-size: 1em;
+    font-size: var(--fontmedium);
 }
 .joinproject {
     display: flex;
