--- a/src/addtask.css
+++ b/src/addtask.css
@@ -61,6 +61,7 @@
     max-width: 700px;
     width:100%;
     background-color: var(--modalbg);
+    user-select: none;
 }
 .cancel {
     position:absolute;
