Changed font size

--- a/src/addtask.css
+++ b/src/addtask.css
@@ -62,6 +62,7 @@
     width:100%;
     background-color: var(--modalbg);
     user-select: none;
+    font-size: var(--fontlarge);
 }
 .cancel {
     position:absolute;
