--- a/src/styles.css
+++ b/src/styles.css
@@ -174,7 +174,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding:0.5rem 1rem;
+    /* padding:10px; */
     margin-bottom: 1.5rem;
     border-radius: 100px;
     background-color: rgb(149, 113, 187);
