--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,7 @@
     --modalbg:rgb(47, 72, 88);
     --category:rgb(194, 194, 194);
     --modalMenuSelected:rgb(21, 33, 41);
+    --textdark: rgb(39, 39, 48);
 }
 li {
     list-style: none;
@@ -141,11 +142,12 @@ body {
     background-color: var(--titlebg);
     /* height:100vh; */
     padding-top: 2rem;
-    padding-right: 1rem;
+    /* padding-right: 1rem; */
     height: fit-content;
     min-height: 90vh;
     overflow: hidden;
     font-size: var(--fontmedium);
+    width:100%;
 }
 .task_category {
     display:flex;
@@ -153,7 +155,8 @@ body {
     justify-content: center;
     align-items: flex-start;
     /* background-color: var(--modalbg); */
-    padding-left: 2rem;
+    /* padding-left: 0px 10px; */
+    margin: 0px 10px;
     
 }
 .categorytxt {
@@ -230,6 +233,13 @@ ul .prio3 {
     flex-basis: var(--flexbasis);
     overflow:hidden;
 }
+.deadline, .taskdescription {
+    
+    color: var(--textdark);
+}
+.deadline {
+    margin-left: 5px;
+}
 .taskdescription {
     color:var(--dark);
 }
@@ -244,7 +254,7 @@ ul .prio3 {
     justify-content: center;
     align-items: stretch;
     flex-direction: column;
-    width:100vw;
+    width:100%;
     gap:15px;
     padding-bottom:10px;
 }
